--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "openai": "^6.15.0",
-    "pdf2json": "^4.0.0",
+    "pdfjs-dist": "^5.4.530",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "resend": "^6.6.0",
