--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "openai": "^6.15.0",
-    "pdfjs-dist": "^5.4.530",
+    "pdf2json": "^4.0.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "resend": "^6.6.0",
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/pdf-parse": "^1.1.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
